modified task_1_7 & task_1_9, commit task_2_1 & task_2_2 & task_2_3

--- a/task_1_7/yft/index.css
+++ b/task_1_7/yft/index.css
@@ -325,7 +325,8 @@ header {
     flex: 2;
     text-align: center;
     color: #fff;
-    background: url("./images/act1.png") no-repeat; }
+    background: url("./images/act1.png") no-repeat;
+    background-size: 100% !important; }
     .details_1 .details_1_img h3 {
       display: flex;
       flex-direction: column;
