--- a/task_1_7/yft/index.scss
+++ b/task_1_7/yft/index.scss
@@ -386,6 +386,7 @@ header {
     text-align: center;
     color: #fff;
     background: url("./images/act1.png") no-repeat;
+    background-size: 100% !important;
     h3 {
       display: flex;
       flex-direction: column;
