--- a/task_1_9/yft/index.css
+++ b/task_1_9/yft/index.css
@@ -273,6 +273,7 @@ li {
           .container .container_right .details .timeline .fl .items li {
             width: 112px;
             height: 65px;
+            background-color: #fff;
             margin-right: 3px;
             text-align: center;
             float: left;
@@ -306,6 +307,7 @@ li {
       .container .container_right .details .timeline .fr {
         width: 131px;
         height: 65px;
+        background-color: #fff;
         font-size: 12px;
         border: 1px solid #cacdd1; }
         .container .container_right .details .timeline .fr a {
@@ -322,6 +324,7 @@ li {
         float: left;
         width: 202px;
         height: 72px;
+        background-color: #fff;
         padding-top: 12px;
         margin-top: 4px;
         margin-right: 28px;
