--- a/task_1_9/yft/index.scss
+++ b/task_1_9/yft/index.scss
@@ -328,6 +328,7 @@ li {
             li {
               width: 112px;
               height: 65px;
+              background-color: #fff;
               margin-right:3px;
               text-align: center;
               float: left;
@@ -371,6 +372,7 @@ li {
         .fr {
           width: 131px;
           height: 65px;
+          background-color: #fff;
           font-size: 12px;
           border: 1px solid #cacdd1;
           a {
@@ -392,6 +394,7 @@ li {
           float: left;
           width: 202px;
           height: 72px;
+          background-color: #fff;
           padding-top: 12px;
           margin-top: 4px;
           margin-right: 28px;
